test-cases/valid/reject/void_function_parameter.ul
void main() {
    print_stuff(foo());
}

int print_stuff(void v) {
    print (v);
}

void foo() {
    print "Void returning function called";
}

